[package]
name = "edgex-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws"] } # Ethers for signing and potential utils
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hmac = "0.12"
url = "2.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
starknet-crypto = "0.7"
starknet-types-core = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
